/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.apache.bigtop.manager.grpc.generated";
option java_outer_classname = "CommandProto";

service CommandService {
  rpc Exec (CommandRequest) returns (CommandReply) {}
}

enum CommandType {
  COMPONENT = 0;
  HOST_CHECK = 1;
  UPDATE_CACHE_FILES = 2;
}

message CommandRequest {
  string payload = 1;
  int64 task_id = 2;
  CommandType type = 3;
}

message CommandReply {
  int32 code = 1;
  string result = 2;
  int64 task_id = 3;
}